--- a/server/templates/article-card.html
+++ b/server/templates/article-card.html
@@ -61,7 +61,13 @@
             {{if .Topics}}
             <div class="topics">
                 {{range .Topics}}
-                <span class="topic-tag">{{.}}</span>
+                <a href="#" class="topic-tag clickable-topic" 
+                   data-topic="{{.}}"
+                   hx-get="/articles"
+                   hx-vals='{"topic":"{{.}}"}'
+                   hx-trigger="click"
+                   hx-target="#articles-with-pagination"
+                   hx-include="#score-filter, #feed-filter, #sort-filter">{{.}}</a>
                 {{end}}
             </div>
             {{end}}
